# pg_catalog

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  TODO_comp_missing.md  download_postgresql.sh  errors_query-intellij.txt  extract_queries_from_postgres_logs.py  generate_schema.py  list_functions.py  notes.md  pg_catalog-schema.yaml  queries.yaml  requirements.txt  run-postgres.sh  schema.py  schema.yaml  test_col_types_query.py  todo-tests.md  try_query_from_python.py  unsupported_queries.yaml
agents-dev/: intellij-compat-tasks.md
pg_schema/: information_schema___pg_foreign_data_wrappers.yaml  information_schema___pg_foreign_servers.yaml  information_schema___pg_foreign_table_columns.yaml  information_schema___pg_foreign_tables.yaml  information_schema___pg_user_mappings.yaml  information_schema__administrable_role_authorizations.yaml  information_schema__applicable_roles.yaml  information_schema__attributes.yaml  information_schema__character_sets.yaml  information_schema__check_constraint_routine_usage.yaml  information_schema__check_constraints.yaml  information_schema__collation_character_set_applicability.yaml  information_schema__collations.yaml  information_schema__column_column_usage.yaml  information_schema__column_domain_usage.yaml  information_schema__column_options.yaml  information_schema__column_privileges.yaml  information_schema__column_udt_usage.yaml  information_schema__columns.yaml  information_schema__constraint_column_usage.yaml  information_schema__constraint_table_usage.yaml  information_schema__data_type_privileges.yaml  (+187 more)
(+162 files in other folders)
