[package]
name = "datafusion_query_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
datafusion = "47.0.0"

sqlparser = "0.55.0"
#arrow = "54.2.1"
arrow = "55.0.0"

chrono = "0.4.40"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
regex = "1"
async-trait = "0.1"
uuid = { version = "1.16.0", features = ["v4"] }
pgwire = "0.28.0"
futures = "0.3.31"
anyhow = "1.0.98"
bytes = "1.10.1"
log = "0.4.27"

[dev-dependencies]
tempfile = "3"
